--- a/dakajy/html/daka.html
+++ b/dakajy/html/daka.html
@@ -3,10 +3,78 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0,user-scalable=no">
-    <script src="./../js/bootstrap.min.js" ></script>
     <script src="./../js/jquery.min.js" ></script>
+    <script src="./../js/bootstrap.min.js" ></script>
+    <script src="./../js/daka.js"></script>
     <link href="./../css/bootstrap.css" rel="stylesheet"/>
+    <link href="./../css/jy/index.css" rel="stylesheet"/>
   </head>
   <body>
+
+    <div class="col-xs-12 col-md-6 col-lg-3 bgk2container">
+        <div class="part-page" id="page1">
+          <div class="part-head">
+            <div class="part-head-user">
+              <img class="user-logo" id="imgUser" src="./../img/daka1/user-head.png"/>
+              <label class="lbl-user" id="lblUser">王董的小秘书</label>
+            </div>
+            <div class="part-head-logo">
+              <img class="slogon-logo" src="./../img/jiyu.png"/>
+              <img class="img-logo" src="./../img/jiyu-logo.png"/>
+            </div>
+          </div>
+          <!-- END: head -->
+          <div class="page-graph">
+            <div class="agraph">
+            </div>
+
+            <div class="aline">
+              <img src="./../img/daka1/line.png"/>
+            </div>
+          </div>
+          <!-- END: Draw Graph -->
+          <div class="page-sign">
+            <label>训练内容</label>
+            <div class="tdgroup">
+                <table>
+                  <tbody>
+                    <tr>
+                      <td class="contents" id="tdArm"><label>臂</label></td>
+                      <td class="contents" id="tdLeg"><label>腿</label></td>
+                      <td class="contents" id="tdBreast"><label>胸</label></td>
+                      <td class="contents" id="tdBack"><label>背</label></td>
+                      <td class="contents" id="tdShoulder"><label>肩</label></td>
+                      <td class="contents" id="tdEtc"><label>···</label></td>
+                    </tr>
+                  </tbody>
+                </table>
+            </div>
+            <div class="abtn">
+              <button class="jybtn" id="btnDaka">打卡</button>
+            </div>
+
+            <div class="agif">
+              <img src="./../img/daka1/daka-next-antimate.gif"/>
+            </div>
+          </div>
+          <!-- END: Sign in -->
+        </div>
+        <!-- END: Page1 -->
+
+        <div class="part-page" id="page2">
+          <div class="part-head">
+            <div class="part-head-user">
+              <img class="user-logo" id="imgUser" src="./../img/daka1/user-head.png"/>
+              <label class="lbl-user" id="lblUser">王董的小秘书</label>
+            </div>
+            <div class="part-head-logo">
+              <img class="slogon-logo" src="./../img/jiyu.png"/>
+              <img class="img-logo" src="./../img/jiyu-logo.png"/>
+            </div>
+          </div>
+        </div>
+        <!-- END: Page2 -->
+      </div>
+    </div>
   </body>
 </html>
