[done] 打卡按钮点击
打卡按钮，已经打卡则不能打卡

--- a/dakajy/html/index.html
+++ b/dakajy/html/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0,user-scalable=no">
+    <meta http-equiv="refresh" content="1;url='daka.html"> 
     <script src="./../js/jquery.min.js" ></script>
     <script src="./../js/bootstrap.min.js" ></script>
     <link href="./../css/bootstrap.css" rel="stylesheet"/>
     <link href="./../css/jy/index.css" rel="stylesheet"/>
   </head>
   <body>
-    <div class="col-xs-12 col-md-6 col-lg-3 bgkcontainer">
+    <div class="col-xs-12 col-md-6 col-lg-3 bgkcontainer" id="bgkcontainer">
       <div class="part-head">
         <div class="part-head-logo">
           <img class="slogon-logo" src="./../img/jiyu.png"/>
