[done] 打卡日历左右滑动
1、建立打卡页面
2、打卡页面左右滑动

--- a/dakajy/html/daka.html
+++ b/dakajy/html/daka.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0,user-scalable=no">
+    <link href="./../css/jy/index.css" rel="stylesheet"/>
+    <link href="./../css/bootstrap.css" rel="stylesheet"/>
+    <link href="./../css/unslider.css" rel="stylesheet"/>
+    <link href="./../css/unslider-dots.css" rel="stylesheet"/>
     <script src="./../js/jquery.min.js" ></script>
     <script src="./../js/bootstrap.min.js" ></script>
+    <script src="./../js/calendar.js"></script>
+    <script src="./../js/unslider.js"></script>
     <script src="./../js/daka.js"></script>
-    <link href="./../css/bootstrap.css" rel="stylesheet"/>
-    <link href="./../css/jy/index.css" rel="stylesheet"/>
   </head>
   <body>
 
@@ -70,6 +74,49 @@
             <div class="part-head-logo">
               <img class="slogon-logo" src="./../img/jiyu.png"/>
               <img class="img-logo" src="./../img/jiyu-logo.png"/>
+            </div>
+          </div>
+          <!-- END: Head -->
+          <div class="part-calendar">
+            <div class="part-slide">
+              <div class="slides">
+                <a class="unslider-arrow prev"><img src="./../img/daka2/Group%203.png"/></a>
+                <label class="" id="clabel">2016年12月</label>
+                <a class="unslider-arrow next"><img src="./../img/daka2/Group%204.png"/></a>
+              </div>
+              <div class="aline">
+                <img src="./../img/daka1/line.png"/>
+              </div>
+            </div>
+            <!-- END: Slide -->
+
+            <div class="part-table">
+              <div class="table-title">
+                <table>
+                    <tbody>
+                      <tr><td>日</td><td>一</td><td>二</td><td>三</td><td>四</td><td>五</td><td>六</td></tr>
+                    </tbody>
+                </table>
+              </div>
+
+              <div class="table-banner">
+                <div class="banner">
+                  <ul>
+                    <li><div id="banner1"></div></li>
+                    <li><div id="banner2"></div></li>
+                    <li><div id="banner3"></div></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <!-- END: table -->
+
+            <div class="abtn">
+              <button class="jybtn" id="btnShare">分享</button>
+            </div>
+
+            <div class="aimg">
+              <img src="./../img/daka2/slogan2.png"/>
             </div>
           </div>
         </div>
