[done] 日历左右滑动  + 日历flip

--- a/dakajy/html/daka.html
+++ b/dakajy/html/daka.html
@@ -8,10 +8,11 @@
     <link href="./../css/unslider.css" rel="stylesheet"/>
     <link href="./../css/unslider-dots.css" rel="stylesheet"/>
     <script src="./../js/jquery.min.js" ></script>
+    <script src="./../js/jquery.flip.min.js"></script>
     <script src="./../js/bootstrap.min.js" ></script>
     <script src="./../js/calendar.js"></script>
     <script src="./../js/unslider.js"></script>
-    <script src="./../js/daka.js"></script>
+
   </head>
   <body>
 
@@ -101,10 +102,19 @@
 
               <div class="table-banner">
                 <div class="banner">
-                  <ul>
+                  <ul id="banner-list">
                     <li><div id="banner1"></div></li>
                     <li><div id="banner2"></div></li>
                     <li><div id="banner3"></div></li>
+                    <li><div id="banner4"></div></li>
+                    <li><div id="banner5"></div></li>
+                    <li><div id="banner6"></div></li>
+                    <li><div id="banner7"></div></li>
+                    <li><div id="banner8"></div></li>
+                    <li><div id="banner9"></div></li>
+                    <li><div id="banner10"></div></li>
+                    <li><div id="banner11"></div></li>
+                    <li><div id="banner12"></div></li>
                   </ul>
                 </div>
               </div>
@@ -123,5 +133,6 @@
         <!-- END: Page2 -->
       </div>
     </div>
+    <script src="./../js/daka.js"></script>
   </body>
 </html>
