--- a/dakajy/html/daka.html
+++ b/dakajy/html/daka.html
@@ -31,6 +31,9 @@
           <!-- END: head -->
           <div class="page-graph">
             <div class="agraph">
+              <canvas class="canvas-circle" id="circle1"></canvas>
+              <canvas class="canvas-circle" id="circle2"></canvas>
+              <canvas class="canvas-circle" id="circle3"></canvas>
             </div>
 
             <div class="aline">
@@ -133,6 +136,8 @@
         <!-- END: Page2 -->
       </div>
     </div>
+    <script src="./../js/calendar.js"></script>
+    <script src="./../js/canvas.js"></script>
     <script src="./../js/daka.js"></script>
   </body>
 </html>
