--- a/dakajy/html/banner.html
+++ b/dakajy/html/banner.html
@@ -30,7 +30,11 @@
       <canvas id="circle1" width="400" height="400" style="position:absolute;background:inherit;border: 1px solid #000000;"></canvas>
       <canvas id="circle2" width="400" height="400" style="position:absolute;background:inherit;border: 1px solid #000000;"></canvas>
       <canvas id="circle3" width="400" height="400" style="position:absolute;background:inherit;border: 1px solid #000000;"></canvas>
+      <canvas id="circle4" width="400" height="400" style="position:absolute;background:inherit;border: 1px solid #000000;"></canvas>
     </div>
+
+    <label style="color: #ffffff;">Hello World!</label>
+    <label style="font: 1px EurostileMN; color: #ffffff;">Hello World!</label>
 
     <script src="./../js/canvas.js"></script>
     <script>
@@ -117,6 +121,8 @@
         canvas3.setSpeed(0.002);
         canvas3.setAlpha(0.6);
         canvas3.createCircle();
+
+
       });
     </script>
 
