--- a/dakajy/html/daka.html
+++ b/dakajy/html/daka.html
@@ -10,9 +10,7 @@
     <script src="./../js/jquery.min.js" ></script>
     <script src="./../js/jquery.flip.min.js"></script>
     <script src="./../js/bootstrap.min.js" ></script>
-    <script src="./../js/calendar.js"></script>
     <script src="./../js/unslider.js"></script>
-
   </head>
   <body>
 
@@ -31,9 +29,16 @@
           <!-- END: head -->
           <div class="page-graph">
             <div class="agraph">
-              <canvas class="canvas-circle" id="circle1"></canvas>
-              <canvas class="canvas-circle" id="circle2"></canvas>
-              <canvas class="canvas-circle" id="circle3"></canvas>
+              <canvas class="canvas-circle" id="circle1" width="300" height="300"></canvas>
+              <canvas class="canvas-circle" id="circle2" width="300" height="300"></canvas>
+              <canvas class="canvas-circle" id="circle3" width="300" height="300"></canvas>
+              <!-- <canvas class="canvas-circle" id="text" width="300" height="300"></canvas> -->
+              <div class="page-labels">
+                <label class="dakasum-label" id="labelSum">累计打卡</label><br>
+                <label class="daka-nums" id="daka-nums">2 3 3</label><br>
+                <label class="dakasum-label2">今日已有<span id="spanSum">1234</span>个</label></br>
+                <label class="dakasum-label2">肌友</label>
+              </div>
             </div>
 
             <div class="aline">
