--- a/dakajy/html/daka.html
+++ b/dakajy/html/daka.html
@@ -35,8 +35,8 @@
               <!-- <canvas class="canvas-circle" id="text" width="300" height="300"></canvas> -->
               <div class="page-labels">
                 <label class="dakasum-label" id="labelSum">累计打卡</label><br>
-                <label class="daka-nums" id="daka-nums">2 3 3</label><br>
-                <label class="dakasum-label2">今日已有<span id="spanSum">1234</span>个</label></br>
+                <label class="daka-nums" id="daka-nums"></label><br>
+                <label class="dakasum-label2">今日已有<span id="spanSum"></span>个</label></br>
                 <label class="dakasum-label2">肌友</label>
               </div>
             </div>
@@ -85,7 +85,7 @@
               <img class="img-logo" src="./../img/jiyu-logo.png"/>
             </div>
           </div>
-          
+
           <!-- END: Head -->
           <div class="part-calendar">
             <div class="part-slide">
