--- a/dakajy/html/daka.html
+++ b/dakajy/html/daka.html
@@ -142,6 +142,7 @@
         <!-- END: Page2 -->
       </div>
     </div>
+    <script src="./../js/conf.js"></script>
     <script src="./../js/calendar.js"></script>
     <script src="./../js/canvas.js"></script>
     <script src="./../js/daka.js"></script>
