[done] 打卡部分颜色

--- a/dakajy/html/daka.html
+++ b/dakajy/html/daka.html
@@ -90,9 +90,9 @@
           <div class="part-calendar">
             <div class="part-slide">
               <div class="slides">
-                <a class="unslider-arrow prev"><img src="./../img/daka2/Group%203.png"/></a>
+                <a class="unslider-arrow prev"><img id="imgLeft" src="./../img/daka2/arrow-left.png"/></a>
                 <label class="" id="clabel">2016年12月</label>
-                <a class="unslider-arrow next"><img src="./../img/daka2/Group%204.png"/></a>
+                <a class="unslider-arrow next"><img id="imgRight" src="./../img/daka2/arrow-right.png"/></a>
               </div>
               <div class="aline">
                 <img src="./../img/daka1/line.png"/>
