[done] 打卡web + end
1、动效还没有完全做
2、安全性能
3、session

--- a/dakajy/html/daka.html
+++ b/dakajy/html/daka.html
@@ -143,6 +143,7 @@
       </div>
     </div>
     <script src="./../js/conf.js"></script>
+    <script src="./../js/web.js"></script>
     <script src="./../js/calendar.js"></script>
     <script src="./../js/canvas.js"></script>
     <script src="./../js/daka.js"></script>
