[done] bug：修改打卡问题

--- a/dakajy/html/index.html
+++ b/dakajy/html/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0,user-scalable=no">
-    <meta http-equiv="refresh" content="1;url='daka.html"> 
+    <meta http-equiv="refresh" content="1;url='daka.html">
     <script src="./../js/jquery.min.js" ></script>
     <script src="./../js/bootstrap.min.js" ></script>
     <link href="./../css/bootstrap.css" rel="stylesheet"/>
@@ -24,5 +24,6 @@
         <img class="img-logo-large" src="./../img/dakahome/jiyu-logo-animate.png"/>
       </div>
     </div>
+    <script src="./../js/jweixin-1.0.0.js"></script>
   </body>
 </html>
